# MyOpenglProject

./: .gitignore  CMakeLists.txt  main.cpp
include/: Camera.h  Material.h  Mesh.h  Model.h  ResourceManager.h  ShaderProgram.h  Texture.h  extra.h
res/models/: backpack.mtl
res/shaders/: fragment.txt  vertex.txt
src/extra/: extra.cpp  extra.h
src/objects/: Camera.cpp  Camera.h
src/renderer/: Material.cpp  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ObjectMesh.cpp  ObjectMesh.h  Texture.cpp  object.cpp  object.h  shaderProgram.cpp  shaderProgram.h
src/resource_manager/: ResourceManager.cpp  ResourceManager.h
